<resources>
    <string name="app_name">SpotifyClone</string>

    <string name="millions_of_songs">Millions of Songs.</string>
    <string name="free_on_spotify">Free on spotify.</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_apple">Continue with apple</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="require_email">What\'s your email?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_email">you\'ll need to confirm this email later </string>
    <string name="use_atleast_8_char">Use atleast 8 characters. </string>
    <string name="create_password">Create a password</string>
    <string name="gender">What’s your gender?</string>
    <string name="name">What’s your name?</string>
    <string name="description_name">This appears on your spotify profile</string>
    <string name="section_placeholder">Section Placeholder</string>
    <string name="dummy_album">Ed Sheeran, Big Sean, Juice WRLD, Post Malone</string>
    <string name="profile_name">Atul Khandekar</string>

    //nav icon titles
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="your_library">Your Library</string>
    <string name="camera">Camera</string>

    <string name="whats_new">What\'s new </string>
    <string name="recent_played">Recently played</string>
    <string name="settings">Settings</string>

    <string name="profile_button_ratio">1:1</string>
    <string name="a">A</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist">Playlist</string>
    <string name="songs_count">Songs Count</string>
    <string name="search_song_hint">What do you want to listen ?</string>
    <string name="search_song_description">Play what you love </string>
    <string name="search_song_description_subtitle">Search for artists, songs, podcasts , and  more.</string>
    <string name="sign_up">Sign up </string>

    <string name="search_field_hint">Artists, songs, or podcasts</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="category_title">Category Title</string>
    <string name="search_library_title">Search Library</string>
    <string name="add_library_title">Add Library</string>
    <string name="track_name">Track Name </string>
    <string name="playlist_id">playlistId</string>
    <string name="playing_from_playlist">PLAYING FROM PLAYLIST</string>
    <string name="more">More</string>
    <string name="initial_value">0:00</string>
    <string name="final_value">0:30</string>
</resources>