<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:paddingTop="@dimen/padding_8"
    android:paddingBottom="@dimen/padding_8"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlist_image_view"
        android:layout_width="@dimen/height_67dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_playlist_background"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/playlist_image_view"
        app:layout_constraintBottom_toTopOf="@id/playlist"
        android:layout_marginStart="@dimen/margin_14"
        app:layout_constraintTop_toTopOf="@id/playlist_image_view"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="@dimen/search_field_text_size_16"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/playlist_image_view"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        android:textColor="@color/primary_light_grey"
        android:text="@string/playlist"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintStart_toStartOf="@id/playlist_name"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/songs_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_light_grey"
        android:textSize="@dimen/text_size_13"
        android:text="@string/songs_count"
        app:layout_constraintStart_toEndOf="@id/playlist"
        app:layout_constraintTop_toTopOf="@id/playlist"
        app:layout_constraintBottom_toBottomOf="@id/playlist"
        android:layout_marginStart="@dimen/margin_14"/>






</androidx.constraintlayout.widget.ConstraintLayout>