<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.LibraryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/your_library_tool_bar"
        style="@style/navigation_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_26"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_your_library">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_button_library"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:background="@drawable/round_button"
                android:text="@string/a"
                app:layout_constraintDimensionRatio="1,1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/navigation_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_end_24"
                android:text="@string/your_library"
                app:layout_constraintBottom_toBottomOf="@id/profile_button_library"
                app:layout_constraintStart_toEndOf="@id/profile_button_library"
                app:layout_constraintTop_toTopOf="@id/profile_button_library" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_profile_button"
                android:backgroundTint="@color/primary_grey"
                android:padding="@dimen/dp_0"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/profile_button_library" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chip_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:backgroundTint="@drawable/selector_chip_button"
                android:text="@string/playlist"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/dp_200"
                app:layout_constraintBottom_toBottomOf="@id/btn_close"
                app:layout_constraintStart_toEndOf="@id/btn_close"
                app:layout_constraintTop_toTopOf="@id/btn_close" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chip_artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:backgroundTint="@drawable/selector_chip_button"
                android:text="@string/artists"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/dp_200"
                app:layout_constraintBottom_toBottomOf="@id/chip_playlist"
                app:layout_constraintStart_toEndOf="@id/chip_playlist"
                app:layout_constraintTop_toTopOf="@id/chip_playlist" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/button_padding_top_bottom_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_library_tool_bar"
        tools:itemCount="7"
        tools:listitem="@layout/item_your_library" />

</androidx.constraintlayout.widget.ConstraintLayout>